# TOE

./: .gitignore  Additional Derivations for Key Equations.docx  Carolina_Connection  Carolina_Connection_fixed.py  README.md  README_Gifting_Insert.md  TOE.code-workspace  demo.py  nano  nano_star_simulation.py  phoenix_ignition.code-workspace  pyproject.toml  requirements.txt  run_all_simulations.py  stellar_evolution.py  test_plotting.py  test_stellar_evolution.py  v000_000_8_1 The End of Infinitys Darkness.docx
.github/workflows/: blank.yml
